--- a/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
+++ b/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
@@ -13,6 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Commands\GetRowsCommand.cs~RF1f7f6501.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.1.14" />
     <PackageReference Include="PowerShellStandard.Library" Version="5.1.1">
       <PrivateAssets>All</PrivateAssets>
