Session and Client as Exported Variables

--- a/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
+++ b/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
@@ -24,6 +24,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="AMSoftware.Dataverse.PowerShell.psm1">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="AMSoftware.Dataverse.PowerShell.Formats.ps1xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
