--- a/src/AMSoftware.Dataverse.PowerShell/Properties/launchSettings.json
+++ b/src/AMSoftware.Dataverse.PowerShell/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PowerShell": {
       "commandName": "Executable",
-      "executablePath": "C:\\Program Files\\PowerShell\\7\\pwsh.exe",
+      "executablePath": "pwsh.exe",
       "commandLineArgs": "-NoLogo -NoExit -Command \"Import-Module '.\\AMSoftware.Dataverse.PowerShell.psd1'\""
     }
   }
