Use of Custom AssemblyLoadContext because of depencies conflict between PowerShell and module package (Microsoft.PowerPlatform.Dataverse.Client)

--- a/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
+++ b/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
@@ -1,41 +1,39 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <AssemblyName>AMSoftware.Dataverse.PowerShell</AssemblyName>
-    <OutputType>Library</OutputType>
-    <RootNamespace>AMSoftware.Dataverse.PowerShell</RootNamespace>
-    <RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
-    <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
-    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    <ProduceReferenceAssemblyInOutDir>true</ProduceReferenceAssemblyInOutDir>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<AssemblyName>AMSoftware.Dataverse.PowerShell</AssemblyName>
+		<OutputType>Library</OutputType>
+		<RootNamespace>AMSoftware.Dataverse.PowerShell</RootNamespace>
+		<RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
+		<RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+		<ProduceReferenceAssemblyInOutDir>true</ProduceReferenceAssemblyInOutDir>
+		<!-- Disable deps.json generation -->
+		<GenerateDependencyFile>false</GenerateDependencyFile>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Commands\GetRowsCommand.cs~RF1f7f6501.TMP" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.1.*" />
+		<PackageReference Include="PowerShellStandard.Library" Version="5.1.1">
+			<PrivateAssets>All</PrivateAssets>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.1.14" />
-    <PackageReference Include="PowerShellStandard.Library" Version="5.1.1">
-      <PrivateAssets>All</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="AMSoftware.Dataverse.PowerShell.psm1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="AMSoftware.Dataverse.PowerShell.Formats.ps1xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="AMSoftware.Dataverse.PowerShell.Types.ps1xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="AMSoftware.Dataverse.PowerShell.psd1">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Update="AMSoftware.Dataverse.PowerShell.psm1">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="AMSoftware.Dataverse.PowerShell.Formats.ps1xml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="AMSoftware.Dataverse.PowerShell.Types.ps1xml">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="AMSoftware.Dataverse.PowerShell.psd1">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 
 </Project>
