Get-Dataverse user as module function

--- a/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
+++ b/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
@@ -22,6 +22,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<None Update="AMSoftware.Dataverse.PowerShell.AccessManagement.psm1">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 		<None Update="AMSoftware.Dataverse.PowerShell.psm1">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
