Administration psm1 + Build Docs

--- a/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
+++ b/src/AMSoftware.Dataverse.PowerShell/AMSoftware.Dataverse.PowerShell.csproj
@@ -25,6 +25,9 @@
 		<None Update="AMSoftware.Dataverse.PowerShell.AccessManagement.psm1">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+		<None Update="AMSoftware.Dataverse.PowerShell.Administration.psm1">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
 		<None Update="AMSoftware.Dataverse.PowerShell.psm1">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
